--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
